test/scc/pp/errors/054.a
054.t:1:2: error: #endif without #if